fix file size, fix collision message on mobile, added colors to outline-wise select-field

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -42,6 +42,8 @@
   --col-wise: #{$wise};
   --col-weak: #{$weak};
   --col-flabby: #{$flabby};
+  --col-vague: #{$vague};
+  --col-elusive: #{$elusive};
   --col-simple: #{$simple};
   --col-soft: #{$soft};
   --col-glossy: #{$glossy};
