--- a/static/branding/_app-colors.scss
+++ b/static/branding/_app-colors.scss
@@ -34,7 +34,9 @@ $home: #1B1C1E;
 $genius: #fffdd4;
 $wise: #ffa500;
 $weak: #fff5e9;
-$flabby: #fff4e3;
+$flabby: #fef2e4;
+$vague: #fef0e0;
+$elusive: #fbeede;
 $simple: #e7fffa;
 $soft: #1A5387;
 $glossy: #82C3FF;
